--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -4,7 +4,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="panel-title">
-            <h3 class="text-center"><%= params[:action].titleize %> <%= params[:controller].titleize.singularize %></h3>
+            <h3 class="text-center"><%= params_header %></h3>
           </div>
         </div>
         <div class="panel-body">
@@ -21,28 +21,28 @@
             <% end %>
 
             <div class="form-group">
-              <%= f.label :card_name %>
+              <%= f.label :card_name, 'Full Name' %>
               <%= f.text_field :card_name, class: 'form-control' %>
             </div>
 
             <div class="form-group">
-              <%= f.label :card_last_four %>
+              <%= f.label :card_last_four, 'Last Four' %>
               <%= f.number_field :card_last_four, class: 'form-control' %>
             </div>
 
             <div class="form-group">
-              <%= f.label :card_exp_month %>
+              <%= f.label :card_exp_month, 'Exp Month' %>
               <%= f.text_field :card_exp_month, class: 'form-control' %>
             </div>
 
             <div class="form-group">
-              <%= f.label :card_exp_year %>
+              <%= f.label :card_exp_year, 'Exp Year' %>
               <%= f.number_field :card_exp_year, class: 'form-control' %>
             </div>
 
             <div class="form-group">
               <%= f.check_box :default_card, class: 'form-check' %>
-              <%= f.label :default_card %>
+              <%= f.label :default_card, 'Default Card ?' %>
             </div>
 
             <div class="form-group">
