--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -5,7 +5,7 @@
         <div class="panel-heading">
           <div class="row">
             <div class="col col-xs-6">
-              <div class="panel-heading">Sales</div>
+              <div class="panel-heading">Cards</div>
             </div>
             <div class="col col-xs-6">
               <%= link_to 'New Card', new_card_path, class: 'btn btn-default btn-sm pull-right' %>
