--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -4,7 +4,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="panel-title">
-            <h3 class="text-center"><%= params[:action].titleize %> <%= params[:controller].titleize.singularize %></h3>
+            <h3 class="text-center"><%= params_header %></h3>
           </div>
         </div>
         <div class="panel-body">
