--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -1,14 +1,9 @@
-<% unless @error.nil? %>
-  <div class="alert alert-danger"><%= @error.message %></div>
-<% end %>
-<%# form_tag buy_path(permalink: @product.permalink), :id => 'payment-form' %>
-  <div class="payment-errors"></div>
-  <script type="text/javascript">
+<script type="text/javascript">
     $(function(){
       Stripe.setPublishableKey('<%= Rails.configuration.stripe[:publishable_key] %>');
     });
   </script>
-
+<div class="payment-errors"></div>
 <div class="container">
 	<div class="row">
 		<div class="col-md-6 col-md-offset-1 col-sm-6">
@@ -21,6 +16,12 @@
         <div class="panel-body">
           <%= form_tag @subscription, :id => 'new-purchase', :class => 'form-group', :novalidate => 'novalidate' %>
             <div class="payment-errors"></div>
+            <% unless @subscription.errors.blank? %>
+              <div class="alert alert-danger">
+                <button type="button" class="close" data-dismiss="alert">×</button>
+                <p><%= @subscription.errors.full_messages.to_sentence %></p>
+              </div>
+            <% end %>
           	<fieldset>
           		<div class="row form-group">
                 <div class="col-md-6">
